@@ -124,6 +124,10 @@ GUI:
 
  - IGUIStaticText new methods setDrawBorder and setTextAlignment.
 
+ - Added IGUIListBox::setAutoScrollEnabled and isAutoScrollEnabled, for automatic
+   scrolling when selecting or adding an item. Scrollbars are now only visible 
+   when the list doesn't fit in the visible area.
+
 
 Changes in version 1.3.1 (20 Jun 2007)
 
